# qBittorrent-rss-rules

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  alembic.ini  pyproject.toml  rebuild_desktop_app.bat
QbRssRulesDesktop/: App.xaml  App.xaml.cs  Imports.cs  Package.appxmanifest  QbRssRulesDesktop.csproj  QbRssRulesDesktop.slnx  app.manifest
alembic/: env.py
app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
docs/: api.md  architecture.md  native-python-pytest.md  releases.md  testing.md
scripts/: CWINDOWSsystem32cmd.exe - scriptsrun_dev.bat.txt  backfill_rule_release_cache.py  capture_live_hover_overlay.py  capture_search_ui.py  capture_ui.bat  capture_ui.sh  check.bat  check.sh  closeout_browser_qa.py  closeout_qa.bat  closeout_qa.sh  install_desktop_bundle.cmd  install_desktop_bundle.ps1  package_desktop_bundle.ps1  refresh_winui_shortcuts.ps1  release_prep.py  restore_windows_migration_bundle.cmd  restore_windows_migration_bundle.ps1  run_dev.bat  run_dev.sh  stremio_addon_smoke.py  stremio_desktop_smoke.py  stremio_desktop_variant_matrix.py  test.bat  test.sh
tests/: conftest.py  jellyfin_test_utils.py  stremio_test_utils.py  test_category_catalog.py  test_config.py  test_importer.py  test_jackett.py  test_jellyfin.py  test_jellyfin_auto_sync.py  test_local_playback.py  test_main.py  test_metadata.py  test_qbittorrent_client.py  test_quality_filters.py  test_release_versioning.py  test_routes.py  test_rule_builder.py  test_rule_fetch_ops.py  test_selective_queue.py  test_settings_service.py  test_static_assets.py  test_stremio.py  test_stremio_addon.py  (+3 more)
(+122 files in other folders)
