[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "qbittorrent-rss-rule-manager"
version = "0.8.4"
description = "Local web UI for managing qBittorrent RSS auto-download rules."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
  { name = "Codex" },
]
dependencies = [
  "alembic>=1.14,<2.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "jinja2>=3.1,<4.0",
  "pydantic>=2.10,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2.0",
  "pillow>=12,<13",
  "playwright>=1.52,<2.0",
  "pre-commit>=4,<5",
  "pytest>=8,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"app/data/quality_taxonomy.json" = "app/data/quality_taxonomy.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --ignore-glob=*-DESKTOP-*.py"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["*-DESKTOP-*.py"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "N",
  "UP",
  "B",
]
ignore = [
  "E501",
  "UP040",
  "UP042",
]

[tool.ruff.lint.per-file-ignores]
"app/routes/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_equality = true
plugins = []
exclude = '(^|[/\\\\]).*-DESKTOP-[^/\\\\]+\\.py$'
